# rust-lib-crate-template

./: .boilerplatoignore  Cargo.toml  Cargo.toml.boiler  README.md  README.md.boiler  boilerplato.yml  releez.yml.boiler  tusk.yml
examples/: example1.rs  example1.rs.boiler  test.rs.boiler
src/: error.rs  error.rs.boiler  lib.rs  lib.rs.boiler
